--- a/personal-info.html
+++ b/personal-info.html
@@ -311,7 +311,7 @@
                                           id="legalName-row-action"
                                           aria-labelledby="legalName-row-action legalName-row-title"
                                           type="button"
-                                          class="_en4nskq"
+                                          class="btn-link--condensed"
                                         >
                                           Edit
                                         </button>
@@ -360,7 +360,7 @@
                                           id="legalName-row-action"
                                           aria-labelledby="legalName-row-action legalName-row-title"
                                           type="button"
-                                          class="_en4nskq"
+                                          class="btn-link--condensed"
                                         >
                                           Cancel
                                         </button>
@@ -475,7 +475,7 @@
                                           id="gender-row-action"
                                           aria-labelledby="gender-row-action gender-row-title"
                                           type="button"
-                                          class="_en4nskq"
+                                          class="btn-link--condensed"
                                         >
                                           Edit
                                         </button>
@@ -520,7 +520,7 @@
                                           id="gender-row-action"
                                           aria-labelledby="gender-row-action gender-row-title"
                                           type="button"
-                                          class="_en4nskq"
+                                          class="btn-link--condensed"
                                         >
                                           Cancel
                                         </button>
@@ -633,7 +633,7 @@
                                           aria-labelledby="personal-info-fields-birthdate-row-action personal-info-fields-birthdate-row-title"
                                           disabled=""
                                           type="button"
-                                          class="_en4nskq"
+                                          class="btn-link--condensed"
                                         >
                                           Edit
                                         </button>
@@ -678,7 +678,7 @@
                                           id="email-row-action"
                                           aria-labelledby="email-row-action email-row-title"
                                           type="button"
-                                          class="_en4nskq"
+                                          class="btn-link--condensed"
                                         >
                                           Edit
                                         </button>
@@ -726,7 +726,7 @@
                                           id="email-row-action"
                                           aria-labelledby="email-row-action email-row-title"
                                           type="button"
-                                          class="_en4nskq"
+                                          class="btn-link--condensed"
                                         >
                                           Cancel
                                         </button>
@@ -837,7 +837,7 @@
                                                     id="320255193-row-action"
                                                     aria-labelledby="320255193-row-action 320255193-row-title"
                                                     type="button"
-                                                    class="_en4nskq"
+                                                    class="btn-link--condensed"
                                                   ></button>
                                                 </div>
                                               </div></div
@@ -850,7 +850,7 @@
                                           id="phoneNumbers-row-action"
                                           aria-labelledby="phoneNumbers-row-action phoneNumbers-row-title"
                                           type="button"
-                                          class="_en4nskq"
+                                          class="btn-link--condensed"
                                         >
                                           Edit
                                         </button>
@@ -895,7 +895,7 @@
                                           id="phoneNumbers-row-action"
                                           aria-labelledby="phoneNumbers-row-action phoneNumbers-row-title"
                                           type="button"
-                                          class="_en4nskq"
+                                          class="btn-link--condensed"
                                         >
                                           Close
                                         </button>
@@ -936,7 +936,7 @@
                                             id="320255193-row-action"
                                             aria-labelledby="320255193-row-action 320255193-row-title"
                                             type="button"
-                                            class="_en4nskq"
+                                            class="btn-link--condensed"
                                           >
                                             Edit
                                           </button>
@@ -990,7 +990,7 @@
                                           id="personal-info-fields-identity-row-action"
                                           aria-labelledby="personal-info-fields-identity-row-action personal-info-fields-identity-row-title"
                                           type="button"
-                                          class="_en4nskq"
+                                          class="btn-link--condensed"
                                         >
                                           Remove
                                         </button>
@@ -1036,7 +1036,7 @@
                                             id="address-row-action"
                                             aria-labelledby="address-row-action address-row-title"
                                             type="button"
-                                            class="_en4nskq"
+                                            class="btn-link--condensed"
                                           >
                                             Edit
                                           </button>
@@ -1084,7 +1084,7 @@
                                             id="address-row-action"
                                             aria-labelledby="address-row-action address-row-title"
                                             type="button"
-                                            class="_en4nskq"
+                                            class="btn-link--condensed"
                                           >
                                             Cancel
                                           </button>
@@ -2215,7 +2215,7 @@
                                           id="emergencyContacts-row-action"
                                           aria-labelledby="emergencyContacts-row-action emergencyContacts-row-title"
                                           type="button"
-                                          class="_en4nskq"
+                                          class="btn-link--condensed"
                                         >
                                           Add
                                         </button>
@@ -2263,7 +2263,7 @@
                                           id="emergencyContacts-row-action"
                                           aria-labelledby="emergencyContacts-row-action emergencyContacts-row-title"
                                           type="button"
-                                          class="_en4nskq"
+                                          class="btn-link--condensed"
                                         >
                                           Cancel
                                         </button>
@@ -3713,7 +3713,7 @@
                                               id="legalName-row-action"
                                               aria-labelledby="legalName-row-action legalName-row-title"
                                               type="button"
-                                              class="_en4nskq"
+                                              class="btn-link--condensed"
                                             >
                                               Edit
                                             </button>
@@ -3762,7 +3762,7 @@
                                               id="legalName-row-action"
                                               aria-labelledby="legalName-row-action legalName-row-title"
                                               type="button"
-                                              class="_en4nskq"
+                                              class="btn-link--condensed"
                                             >
                                               Cancel
                                             </button>
@@ -3882,7 +3882,7 @@
                                               id="gender-row-action"
                                               aria-labelledby="gender-row-action gender-row-title"
                                               type="button"
-                                              class="_en4nskq"
+                                              class="btn-link--condensed"
                                             >
                                               Edit
                                             </button>
@@ -3927,7 +3927,7 @@
                                               id="gender-row-action"
                                               aria-labelledby="gender-row-action gender-row-title"
                                               type="button"
-                                              class="_en4nskq"
+                                              class="btn-link--condensed"
                                             >
                                               Cancel
                                             </button>
@@ -4046,7 +4046,7 @@
                                               aria-labelledby="personal-info-fields-birthdate-row-action personal-info-fields-birthdate-row-title"
                                               disabled=""
                                               type="button"
-                                              class="_en4nskq"
+                                              class="btn-link--condensed"
                                             >
                                               Edit
                                             </button>
@@ -4091,7 +4091,7 @@
                                               id="email-row-action"
                                               aria-labelledby="email-row-action email-row-title"
                                               type="button"
-                                              class="_en4nskq"
+                                              class="btn-link--condensed"
                                             >
                                               Edit
                                             </button>
@@ -4139,7 +4139,7 @@
                                               id="email-row-action"
                                               aria-labelledby="email-row-action email-row-title"
                                               type="button"
-                                              class="_en4nskq"
+                                              class="btn-link--condensed"
                                             >
                                               Cancel
                                             </button>
@@ -4256,7 +4256,7 @@
                                                         id="320255193-row-action"
                                                         aria-labelledby="320255193-row-action 320255193-row-title"
                                                         type="button"
-                                                        class="_en4nskq"
+                                                        class="btn-link--condensed"
                                                       ></button>
                                                     </div>
                                                   </div></div
@@ -4269,7 +4269,7 @@
                                               id="phoneNumbers-row-action"
                                               aria-labelledby="phoneNumbers-row-action phoneNumbers-row-title"
                                               type="button"
-                                              class="_en4nskq"
+                                              class="btn-link--condensed"
                                             >
                                               Edit
                                             </button>
@@ -4314,7 +4314,7 @@
                                               id="phoneNumbers-row-action"
                                               aria-labelledby="phoneNumbers-row-action phoneNumbers-row-title"
                                               type="button"
-                                              class="_en4nskq"
+                                              class="btn-link--condensed"
                                             >
                                               Close
                                             </button>
@@ -4356,7 +4356,7 @@
                                                 id="320255193-row-action"
                                                 aria-labelledby="320255193-row-action 320255193-row-title"
                                                 type="button"
-                                                class="_en4nskq"
+                                                class="btn-link--condensed"
                                               >
                                                 Edit
                                               </button>
@@ -4415,7 +4415,7 @@
                                               id="personal-info-fields-identity-row-action"
                                               aria-labelledby="personal-info-fields-identity-row-action personal-info-fields-identity-row-title"
                                               type="button"
-                                              class="_en4nskq"
+                                              class="btn-link--condensed"
                                             >
                                               Remove
                                             </button>
@@ -4461,7 +4461,7 @@
                                                 id="address-row-action"
                                                 aria-labelledby="address-row-action address-row-title"
                                                 type="button"
-                                                class="_en4nskq"
+                                                class="btn-link--condensed"
                                               >
                                                 Edit
                                               </button>
@@ -4509,7 +4509,7 @@
                                                 id="address-row-action"
                                                 aria-labelledby="address-row-action address-row-title"
                                                 type="button"
-                                                class="_en4nskq"
+                                                class="btn-link--condensed"
                                               >
                                                 Cancel
                                               </button>
@@ -6193,7 +6193,7 @@
                                               id="emergencyContacts-row-action"
                                               aria-labelledby="emergencyContacts-row-action emergencyContacts-row-title"
                                               type="button"
-                                              class="_en4nskq"
+                                              class="btn-link--condensed"
                                             >
                                               Add
                                             </button>
@@ -6241,7 +6241,7 @@
                                               id="emergencyContacts-row-action"
                                               aria-labelledby="emergencyContacts-row-action emergencyContacts-row-title"
                                               type="button"
-                                              class="_en4nskq"
+                                              class="btn-link--condensed"
                                             >
                                               Cancel
                                             </button>
