--- a/invite-friends.html
+++ b/invite-friends.html
@@ -847,7 +847,7 @@
                   <section>
                     <div>
                       <div role="tablist" class="_csc5ey">
-                        <div class="_36rlri">
+                        <div class="breadcrumb__item">
                           <button
                             type="button"
                             class="_1yrhm7tp"
@@ -859,7 +859,7 @@
                             Pending
                           </button>
                         </div>
-                        <div class="_36rlri">
+                        <div class="breadcrumb__item">
                           <button
                             type="button"
                             class="_6v5uk23"
