--- a/payments/payment-methods.html
+++ b/payments/payment-methods.html
@@ -904,9 +904,9 @@
                                   style="margin-top: 40px; margin-bottom: 40px"
                                 >
                                   <nav aria-label="Account">
-                                    <ol class="_1ckj08w">
-                                      <li class="_36rlri">
-                                        <span class="_121z06r2"
+                                    <ol class="breadcrumb">
+                                      <li class="breadcrumb__item">
+                                        <span class="breadcrumb__text"
                                           ><a
                                             href="/account-settings"
                                             class="_sgg9wmi"
@@ -915,9 +915,9 @@
                                           ></span
                                         >
                                       </li>
-                                      <li class="_36rlri">
+                                      <li class="breadcrumb__item">
                                         <div
-                                          class="_36rlri"
+                                          class="breadcrumb__item"
                                           style="
                                             margin-left: 16px;
                                             margin-right: 16px;
@@ -942,7 +942,7 @@
                                         </div>
                                         <span
                                           aria-current="step"
-                                          class="_121z06r2"
+                                          class="breadcrumb__text"
                                           >Payments &amp; payouts</span
                                         >
                                       </li>
