--- a/reviews.html
+++ b/reviews.html
@@ -143,7 +143,7 @@
                                         class="_kf83u4c"
                                         aria-label="Rating 1 out of 5" /><span
                                         data-star="true"
-                                        class="_36rlri"
+                                        class="breadcrumb__item"
                                         ><svg
                                           viewBox="0 0 32 32"
                                           xmlns="http://www.w3.org/2000/svg"
@@ -174,7 +174,7 @@
                                         class="_kf83u4c"
                                         aria-label="Rating 2 out of 5" /><span
                                         data-star="true"
-                                        class="_36rlri"
+                                        class="breadcrumb__item"
                                         ><svg
                                           viewBox="0 0 32 32"
                                           xmlns="http://www.w3.org/2000/svg"
@@ -205,7 +205,7 @@
                                         class="_kf83u4c"
                                         aria-label="Rating 3 out of 5" /><span
                                         data-star="true"
-                                        class="_36rlri"
+                                        class="breadcrumb__item"
                                         ><svg
                                           viewBox="0 0 32 32"
                                           xmlns="http://www.w3.org/2000/svg"
@@ -236,7 +236,7 @@
                                         class="_kf83u4c"
                                         aria-label="Rating 4 out of 5" /><span
                                         data-star="true"
-                                        class="_36rlri"
+                                        class="breadcrumb__item"
                                         ><svg
                                           viewBox="0 0 32 32"
                                           xmlns="http://www.w3.org/2000/svg"
@@ -267,7 +267,7 @@
                                         class="_kf83u4c"
                                         aria-label="Rating 5 out of 5" /><span
                                         data-star="true"
-                                        class="_36rlri"
+                                        class="breadcrumb__item"
                                         ><svg
                                           viewBox="0 0 32 32"
                                           xmlns="http://www.w3.org/2000/svg"
