--- a/submission/GuestP.html
+++ b/submission/GuestP.html
@@ -1186,7 +1186,7 @@
                                       <div class="_1futcm29">
                                         <div class="_1p3joamp">INR</div>
                                       </div>
-                                      <div class="_36rlri">
+                                      <div class="breadcrumb__item">
                                         <div class="_czm8crp">17.60</div>
                                       </div>
                                     </div>
