--- a/login-security.html
+++ b/login-security.html
@@ -490,7 +490,7 @@
                                                       <div class="_hgs47m">
                                                         <div class="va-top-h">
                                                           <div
-                                                            class="breadcrumb__text"
+                                                            class="_121z06r2"
                                                           >
                                                             <span tabindex="-1"
                                                               >Your new
@@ -1253,9 +1253,9 @@
                                   style="margin-top: 40px; margin-bottom: 40px"
                                 >
                                   <nav aria-label="Account">
-                                    <ol class="breadcrumb">
-                                      <li class="breadcrumb__item">
-                                        <span class="breadcrumb__text"
+                                    <ol class="_1ckj08w">
+                                      <li class="_36rlri">
+                                        <span class="_121z06r2"
                                           ><a
                                             href="/account-settings"
                                             class="_sgg9wmi"
@@ -1264,9 +1264,9 @@
                                           ></span
                                         >
                                       </li>
-                                      <li class="breadcrumb__item">
+                                      <li class="_36rlri">
                                         <div
-                                          class="breadcrumb__item"
+                                          class="_36rlri"
                                           style="
                                             margin-left: 16px;
                                             margin-right: 16px;
@@ -1291,7 +1291,7 @@
                                         </div>
                                         <span
                                           aria-current="step"
-                                          class="breadcrumb__text"
+                                          class="_121z06r2"
                                           >Login &amp; security</span
                                         >
                                       </li>
@@ -1316,7 +1316,7 @@
                                         <div class="_4nwxh0j">
                                           <div class="_qgvrjoy">
                                             <div role="tablist" class="_csc5ey">
-                                              <div class="breadcrumb__item">
+                                              <div class="_36rlri">
                                                 <button
                                                   type="button"
                                                   class="_bm3n7y3"
@@ -1637,7 +1637,7 @@
                                                         <div class="_hgs47m">
                                                           <div class="va-top-h">
                                                             <div
-                                                              class="breadcrumb__text"
+                                                              class="_121z06r2"
                                                             >
                                                               <span
                                                                 tabindex="-1"
