--- a/payments/guest-contributions.html
+++ b/payments/guest-contributions.html
@@ -668,9 +668,9 @@
                                   style="margin-top: 40px; margin-bottom: 40px"
                                 >
                                   <nav aria-label="Account">
-                                    <ol class="breadcrumb">
-                                      <li class="breadcrumb__item">
-                                        <span class="breadcrumb__text"
+                                    <ol class="_1ckj08w">
+                                      <li class="_36rlri">
+                                        <span class="_121z06r2"
                                           ><a
                                             href="/account-settings"
                                             class="_sgg9wmi"
@@ -679,9 +679,9 @@
                                           ></span
                                         >
                                       </li>
-                                      <li class="breadcrumb__item">
+                                      <li class="_36rlri">
                                         <div
-                                          class="breadcrumb__item"
+                                          class="_36rlri"
                                           style="
                                             margin-left: 16px;
                                             margin-right: 16px;
@@ -706,7 +706,7 @@
                                         </div>
                                         <span
                                           aria-current="step"
-                                          class="breadcrumb__text"
+                                          class="_121z06r2"
                                           >Payments &amp; payouts</span
                                         >
                                       </li>
@@ -731,7 +731,7 @@
                                         <div class="_4nwxh0j">
                                           <div class="_qgvrjoy">
                                             <div role="tablist" class="_csc5ey">
-                                              <div class="breadcrumb__item">
+                                              <div class="_36rlri">
                                                 <button
                                                   type="button"
                                                   class="_8m436th"
@@ -742,7 +742,7 @@
                                                   PAYMENTS
                                                 </button>
                                               </div>
-                                              <div class="breadcrumb__item">
+                                              <div class="_36rlri">
                                                 <button
                                                   type="button"
                                                   class="_8m436th"
@@ -753,7 +753,7 @@
                                                   PAYOUTS
                                                 </button>
                                               </div>
-                                              <div class="breadcrumb__item">
+                                              <div class="_36rlri">
                                                 <button
                                                   type="button"
                                                   class="_8m436th"
@@ -764,7 +764,7 @@
                                                   TAXES
                                                 </button>
                                               </div>
-                                              <div class="breadcrumb__item">
+                                              <div class="_36rlri">
                                                 <button
                                                   type="button"
                                                   class="_bm3n7y3"
