--- a/profile-reviews.html
+++ b/profile-reviews.html
@@ -37,7 +37,7 @@
                             type="button"
                           >
                             <div class="_5nim5h">
-                              <div class="breadcrumb__item">
+                              <div class="_36rlri">
                                 <div class="_iiid5y">
                                   <svg
                                     viewBox="0 0 1000 1000"
@@ -92,7 +92,7 @@
                             class="_1g2dfiu"
                             aria-label="Airbnb homepage"
                             ><div class="_5nim5h">
-                              <div class="breadcrumb__item">
+                              <div class="_36rlri">
                                 <div class="_iiid5y">
                                   <svg
                                     viewBox="0 0 1000 1000"
@@ -415,9 +415,9 @@
               <section>
                 <div style="margin-top: 40px; margin-bottom: 40px">
                   <nav>
-                    <ol class="breadcrumb">
-                      <li class="breadcrumb__item">
-                        <span class="breadcrumb__text"
+                    <ol class="_1ckj08w">
+                      <li class="_36rlri">
+                        <span class="_121z06r2"
                           ><a
                             href="/users/show"
                             class="_sgg9wmi"
@@ -426,9 +426,9 @@
                           ></span
                         >
                       </li>
-                      <li class="breadcrumb__item">
+                      <li class="_36rlri">
                         <div
-                          class="breadcrumb__item"
+                          class="_36rlri"
                           style="margin-left: 16px; margin-right: 16px"
                         >
                           <svg
@@ -448,7 +448,7 @@
                             ></path>
                           </svg>
                         </div>
-                        <span aria-current="step" class="breadcrumb__text"
+                        <span aria-current="step" class="_121z06r2"
                           >Reviews</span
                         >
                       </li>
@@ -725,7 +725,7 @@
           <div class="inherit-hide-print">
             <div class="_dtnpit">
               <footer role="contentinfo">
-                <div class="breadcrumb__text">
+                <div class="_121z06r2">
                   <div>
                     <div class="footer-hr-lg">
                       <div style="margin-top: 16px; margin-bottom: 16px">
