--- a/airbnb-for-work.html
+++ b/airbnb-for-work.html
@@ -624,9 +624,9 @@
                                     "
                                   >
                                     <nav aria-label="Account">
-                                      <ol class="breadcrumb">
-                                        <li class="breadcrumb__item">
-                                          <span class="breadcrumb__text"
+                                      <ol class="_1ckj08w">
+                                        <li class="_36rlri">
+                                          <span class="_121z06r2"
                                             ><a
                                               href="/account-settings"
                                               class="_sgg9wmi"
@@ -635,9 +635,9 @@
                                             ></span
                                           >
                                         </li>
-                                        <li class="breadcrumb__item">
+                                        <li class="_36rlri">
                                           <div
-                                            class="breadcrumb__item"
+                                            class="_36rlri"
                                             style="
                                               margin-left: 16px;
                                               margin-right: 16px;
@@ -662,7 +662,7 @@
                                           </div>
                                           <span
                                             aria-current="step"
-                                            class="breadcrumb__text"
+                                            class="_121z06r2"
                                             >Travel for work</span
                                           >
                                         </li>
