--- a/dashboard.html
+++ b/dashboard.html
@@ -721,7 +721,7 @@
         width: 100% !important;
         vertical-align: top !important;
       }
-      .breadcrumb__item {
+      ._36rlri {
         display: inline-block !important;
       }
       ._1646hxl {
