--- a/preferences.html
+++ b/preferences.html
@@ -1918,9 +1918,9 @@
                                   style="margin-top: 40px; margin-bottom: 40px"
                                 >
                                   <nav aria-label="Account">
-                                    <ol class="breadcrumb">
-                                      <li class="breadcrumb__item">
-                                        <span class="breadcrumb__text"
+                                    <ol class="_1ckj08w">
+                                      <li class="_36rlri">
+                                        <span class="_121z06r2"
                                           ><a
                                             href="/account-settings"
                                             class="_sgg9wmi"
@@ -1929,9 +1929,9 @@
                                           ></span
                                         >
                                       </li>
-                                      <li class="breadcrumb__item">
+                                      <li class="_36rlri">
                                         <div
-                                          class="breadcrumb__item"
+                                          class="_36rlri"
                                           style="
                                             margin-left: 16px;
                                             margin-right: 16px;
@@ -1956,7 +1956,7 @@
                                         </div>
                                         <span
                                           aria-current="step"
-                                          class="breadcrumb__text"
+                                          class="_121z06r2"
                                           >Global preferences</span
                                         >
                                       </li>
